--- a/dockerfiles/dockerfile_api
+++ b/dockerfiles/dockerfile_api
@@ -1,5 +1,7 @@
 FROM python:3.9
 
+ENV HOME=/home/tasker
+
 EXPOSE 5000
 
 WORKDIR /home/tasker
@@ -10,7 +12,7 @@ COPY ../src/common src/common
 
 ENV PYTHONPATH=":src"
 
-RUN pip3 install -r src/api/requirements.txt && pip3 install -r src/common/requirements.txt
+RUN pip3 install --upgrade pip && pip3 install -r src/api/requirements.txt && pip3 install -r src/common/requirements.txt
 
 ENV WAIT_VERSION 2.7.2
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
